@@ -26,7 +26,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.logging.Level;
 
-import com.openhtmltopdf.css.parser.CSSErrorHandler;
 import com.openhtmltopdf.css.parser.CSSParser;
 import com.openhtmltopdf.css.parser.PropertyValue;
 import com.openhtmltopdf.css.parser.property.BackgroundPropertyBuilder;
@@ -62,22 +61,22 @@ public final class CSSName implements Comparable<CSSName> {
     /**
      * marker var, used for initialization
      */
-    private static final Integer PRIMITIVE = new Integer(0);
+    private static final Integer PRIMITIVE = Integer.valueOf(0);
 
     /**
      * marker var, used for initialization
      */
-    private static final Integer SHORTHAND = new Integer(1);
+    private static final Integer SHORTHAND = Integer.valueOf(1);
 
     /**
      * marker var, used for initialization
      */
-    private static final Integer INHERITS = new Integer(2);
+    private static final Integer INHERITS = Integer.valueOf(2);
 
     /**
      * marker var, used for initialization
      */
-    private static final Integer NOT_INHERITED = new Integer(3);
+    private static final Integer NOT_INHERITED = Integer.valueOf(3);
 
     /**
      * Used to assing unique int id values to new CSSNames created in this class
